start addaptive and win bug with additionaly goods, not responsive items, width 100 %

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -7,11 +7,45 @@
 	
 	/* Header Start */
 	/* Header End */
+	
+	/* Convenience Start */
+	/* Convenience End */
 
-
+	/* Characteristics Start */
+	/* Characteristics End */
 
 	/* Recipe Start */
 	/* Recipe End */
+
+	/* Modes Start */
+	/* Modes End */
+
+	/* Mode 8 Start */
+	/* Mode 8 End */
+
+	/* Constructor Start */
+	/* Constructor End */
+
+	/* About Start */
+	/* About End */
+
+	/* Additionally Start */
+	/* Additionally End */
+
+	/* Reviews Start */
+	/* Reviews End */
+
+	/* FAQ Start */
+	/* FAQ End */
+
+	/* Question Start */
+	/* Question End */
+
+	/* Footer Start */
+	/* Footer End */
+
+	/* Modal Start */
+	/* Modal End */
 
 
 /* Medium Devices, Desktops */
@@ -44,7 +78,48 @@
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px)
-	/**/
+	
+	/* Header Start */
+	/* Header End */
+	
+	/* Convenience Start */
+	/* Convenience End */
+
+	/* Characteristics Start */
+	/* Characteristics End */
+
+	/* Recipe Start */
+	/* Recipe End */
+
+	/* Modes Start */
+	/* Modes End */
+
+	/* Mode 8 Start */
+	/* Mode 8 End */
+
+	/* Constructor Start */
+	/* Constructor End */
+
+	/* About Start */
+	/* About End */
+
+	/* Additionally Start */
+	/* Additionally End */
+
+	/* Reviews Start */
+	/* Reviews End */
+
+	/* FAQ Start */
+	/* FAQ End */
+
+	/* Question Start */
+	/* Question End */
+
+	/* Footer Start */
+	/* Footer End */
+
+	/* Modal Start */
+	/* Modal End */
 
 
 /* Extra Small Devices, Phones */
@@ -65,12 +140,51 @@
 		flex: 0 0 58.33333%
 		max-width: 58.33333%
 
+	/* Header Start */
+	/* Header End */
+	
+	/* Convenience Start */
+	/* Convenience End */
+
+	/* Characteristics Start */
+	/* Characteristics End */
+
+	/* Recipe Start */
+	/* Recipe End */
+
+	/* Modes Start */
+	/* Modes End */
+
+	/* Mode 8 Start */
+	/* Mode 8 End */
+
+	/* Constructor Start */
+	/* Constructor End */
+
+	/* About Start */
+	/* About End */
+
+	/* Additionally Start */
+	/* Additionally End */
+
+	/* Reviews Start */
+	/* Reviews End */
+
+	/* FAQ Start */
+	/* FAQ End */
+
+	/* Question Start */
+	/* Question End */
+
+	/* Footer Start */
+	/* Footer End */
+
+	/* Modal Start */
+	/* Modal End */
+
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
-	.hidden-up
-		display: none
-
 	.col-md-2
 		flex: 0 0 16.66667%
 		max-width: 16.66667%
@@ -94,6 +208,62 @@
 	.col-md-12
 		flex: 0 0 100%
 		max-width: 100%
+
+	/* Header Start */
+
+	.header-navbar
+		#menu
+			display: flex
+			flex-direction: row
+			li
+			li:last-child
+				display: block
+
+
+	/* Header End */
+	
+	/* Convenience Start */
+	/* Convenience End */
+
+	/* Characteristics Start */
+	/* Characteristics End */
+
+	/* Recipe Start */
+
+	.hidden-up
+		display: none
+
+	/* Recipe End */
+
+	/* Modes Start */
+	/* Modes End */
+
+	/* Mode 8 Start */
+	/* Mode 8 End */
+
+	/* Constructor Start */
+	/* Constructor End */
+
+	/* About Start */
+	/* About End */
+
+	/* Additionally Start */
+	/* Additionally End */
+
+	/* Reviews Start */
+	/* Reviews End */
+
+	/* FAQ Start */
+	/* FAQ End */
+
+	/* Question Start */
+	/* Question End */
+
+	/* Footer Start */
+	/* Footer End */
+
+	/* Modal Start */
+	/* Modal End */
 
 
 /* Medium Devices, Desktops */
@@ -122,10 +292,63 @@
 		flex: 0 0 58.33333%
 		max-width: 58.33333%
 
+	/* Header Start */
+
+	.header-navbar
+		#menu
+			li
+				.h-link
+					padding: rem(10) rem(20)
+			li:last-child
+				font-size: 16px
+
+
+	/* Header End */
+	
+	/* Convenience Start */
+	/* Convenience End */
+
+	/* Characteristics Start */
+	/* Characteristics End */
+
+	/* Recipe Start */
+	/* Recipe End */
+
+	/* Modes Start */
+	/* Modes End */
+
+	/* Mode 8 Start */
+	/* Mode 8 End */
+
+	/* Constructor Start */
+
 	.constructor-controls-filter-valume
 		.choose
 			padding-right: 0
 			padding-left: 0
+
+	/* Constructor End */
+
+	/* About Start */
+	/* About End */
+
+	/* Additionally Start */
+	/* Additionally End */
+
+	/* Reviews Start */
+	/* Reviews End */
+
+	/* FAQ Start */
+	/* FAQ End */
+
+	/* Question Start */
+	/* Question End */
+
+	/* Footer Start */
+	/* Footer End */
+
+	/* Modal Start */
+	/* Modal End */
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
