--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -163,8 +163,6 @@ textarea
 
 /* Header Start */
 
-
-/* Navnar Start */
 .header
 	position: relative
 	width: 100%
@@ -179,13 +177,12 @@ textarea
 	opacity: .95
 	box-shadow: 0 0 10px #ccc
 	background-color: #FFF
-
+	// display: none
+	
 .header-nav-box
 	display: flex
 	justify-content: space-between
 	align-items: center
-	// flex-direction: row
-	// flex-wrap: nowrap
 	max-width: 1240px
 	margin: auto
 	padding: rem(3)
@@ -201,13 +198,14 @@ textarea
 		font-size: 10px
 
 .header-navbar
-	ul
+	#menu
 		display: flex
+		flex-direction: column
 		align-items: center
 		li
 			.h-link
 				display: block
-				padding: rem(10) rem(20)
+				padding: rem(5) rem(5)
 				font-size: 14px
 				&:hover
 					color: $accent
@@ -223,6 +221,9 @@ textarea
 		li:last-child
 			font-family: $else-font
 			font-weight: bold
+			display: none
+			font-size: 14px
+			// min-width: 160px
 			// opacity: 1
 			// transition: width .5s ease
 			// display: none
@@ -244,10 +245,6 @@ textarea
 	a
 		font-size: 14px
 		color: $accent
-
-/* Navnar End */
-
-/* Wellcome Start */
 
 .header-wellcome
 	padding-top: rem(72)
@@ -343,6 +340,8 @@ textarea
 				left: rem(-512)
 				bottom: 0
 				z-index: 0
+				// width: 100%
+				// display: none
 				// left: -512px
 			.order-ico
 				position: absolute
@@ -361,7 +360,6 @@ textarea
 					font-size: 18px
 					color: $accent			
 
-/* Wellcome End */
 
 /* Header End */
 
@@ -616,7 +614,7 @@ textarea
 					font-size: 20px
 					text-transform: uppercase
 					font-weight: bold
-					margin: 0 rem(15)
+					// margin: 0 rem(15)
 					background-color: $green
 					&:hover
 						text-decoration: none
@@ -1058,6 +1056,7 @@ textarea
 							img
 								max-height: rem(250)
 								max-width: rem(250)
+								width: 100%
 							p
 								margin-top: 0
 								margin-bottom: rem(1)
@@ -1314,10 +1313,6 @@ textarea
 				p, div, .title
 					margin-bottom: rem(8)
 
-
-
-
-
 /* Footer End */
 
 /* Modal Start */
@@ -1436,6 +1431,48 @@ textarea
 
 /* Modal End */
 
+/*test*/
+
+// .convenience
+// 	display: none
+// .characteristics
+// 	display: none
+// .recipe
+// 	display: none
+// .modes
+// 	display: none
+// .mode-one
+// 	display: none
+// .mode-two
+// 	display: none
+// .mode-three
+// 	display: none
+// .mode-four
+// 	display: none
+// .mode-five
+// 	display: none
+// .mode-six
+// 	display: none
+// .mode-seven
+// 	display: none
+// .mode-eight
+// 	display: none
+// .constructor
+// 	display: none
+// .about
+// 	display: none
+// .additionally
+// 	display: none
+// .additionally-goods
+// 	display: none
+// .reviews
+// 	display: none
+// .faq
+// 	display: none
+// .question
+// 	display: none
+
+/*test*/
 
 
 @import "media" // Всегда в конце
